--- a/build.gradle
+++ b/build.gradle
@@ -17,10 +17,14 @@ repositories {
         name = "sonatype"
         url = "https://oss.sonatype.org/content/groups/public/"
     }
+    maven {
+        name = "ProtocolLib"
+        url = "https://repo.dmulloy2.net/repository/public/" }
 }
 
 dependencies {
     compileOnly "io.papermc.paper:paper-api:1.20.6-R0.1-SNAPSHOT"
+    compileOnly 'com.comphenix.protocol:ProtocolLib:5.1.0'
     paperweight.paperDevBundle "1.20.6-R0.1-SNAPSHOT"
 }
 
