--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,11 @@ plugins {
     id 'java'
     id("io.papermc.paperweight.userdev") version "1.7.7"
     id("xyz.jpenilla.run-paper") version "2.3.1"
+    id 'com.gradleup.shadow' version '9.0.0-beta6'
 }
 
 group = 'me.betun'
-version = '1.0'
+version = '1.1'
 
 repositories {
     mavenCentral()
@@ -26,6 +27,12 @@ dependencies {
     compileOnly "io.papermc.paper:paper-api:1.20.6-R0.1-SNAPSHOT"
     compileOnly 'com.comphenix.protocol:ProtocolLib:5.1.0'
     paperweight.paperDevBundle "1.20.6-R0.1-SNAPSHOT"
+    implementation "net.dv8tion:JDA:5.2.2"
+    shadow "net.kyori:adventure-platform-bukkit:4.3.4"
+}
+
+shadowJar{
+    configurations = [project.configurations.shadow]
 }
 
 tasks {
